--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- Google Search Console verification -->
+  <meta name="google-site-verification" content="7Sn8_QH6PdWAYvbqSJJ-Xf5QSMuHO0892O9m-vUOYh0" />
+
   <title>Legends Risings</title>
 
   <!-- SEO -->
@@ -437,6 +441,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
