--- a/news.html
+++ b/news.html
@@ -276,6 +276,42 @@
         <a class="btn" href="index.html">Powrót</a>
       </div>
 
+      <!-- NEWS 3 -->
+      <div class="slide">
+        <h1>Nowa Edycja – System Customowych Zaklęć! ✨🔮</h1>
+        <div class="date">19.10.2025</div>
+
+        <p>Witajcie Poszukiwacze Mocy!<br>
+        Nadchodzi kolejny przełom w świecie <strong>Legends Rising</strong> — 
+        przedstawiamy zupełnie nowy <strong>system customowych enchantów (zaklęć)!</strong></p>
+
+        <p>Dzięki nowemu <strong>GUI Zaklęć</strong> możecie w intuicyjny sposób 
+        ulepszać swoje przedmioty, łączyć unikalne moce i tworzyć potężne kombinacje, 
+        które całkowicie odmienią Wasz styl gry.</p>
+
+        <p>Każde zaklęcie zostało starannie zaprojektowane, by zachować balans 
+        między PvP i PvE, a jednocześnie dodać świeżości i głębi do rozgrywki.</p>
+
+        <h3>🌟 Co was czeka?</h3>
+        <ul>
+          <li>Nowy, przejrzysty interfejs <strong>GUI Zaklęć</strong></li>
+          <li>Dziesiątki unikalnych efektów i mocy</li>
+          <li>Pełna kompatybilność z PvP oraz PvE</li>
+          <li>Nowy sposób na ulepszanie ekwipunku i budowanie własnych buildów</li>
+        </ul>
+
+        <div class="image-container">
+          <img src="zdjecia/13.png" alt="System Customowych Zaklęć">
+        </div>
+
+        <div class="final-text">
+          🔥 Odkryj magię, której jeszcze nie było – i stań się legendą dzięki własnym zaklęciom!<br>
+          👉 Dołącz już teraz i przetestuj nowy system custom enchantów!
+        </div>
+
+        <a class="btn" href="index.html">Powrót</a>
+      </div>
+
     </div>
 
     <div class="arrow left">❮</div>
@@ -341,6 +377,7 @@
   </script>
 </body>
 </html>
+
 
 
 
